# mocker

./: .lvimrc  Cargo.toml  README.md  test.mock
.github/workflows/: check.yml
examples/: readme.mock  simple.mock  two_tables.mock
sources/: first_names.txt
src/: arguments.rs  generator.rs  main.rs  mocker.rs  provider.rs  register_providers.rs  registrars.rs
src/generators/: mod.rs  tsql.rs
src/parser/: config.rs  errors.rs  mock_table_definition.pest  mod.rs  pointer.rs
src/providers/: first_name.rs  gender.rs  mod.rs  number.rs  random.rs  row.rs
src/registry/: mod.rs  registrars.rs
vim/: mock.vim
