[package]
name = "mocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.1.18", features = [ "derive" ] }
lazy_static = "1.4.0"
rand = "0.8.5"

[dev-dependencies]

tempfile = "3.3.0"
